fix(frontend): Fix icon alignment

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -400,6 +400,8 @@ a:hover {
         width: 100%;
     }
     .footer .himsisfo-himti-container {
+        width: 325px;
+        height: 141.12px;
         margin-bottom: 20px;
     }
 }
